bridge/base/0-cineverse-namespace.yaml
#! 0-cineverse-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: cineverse
    labels:
        com.docker.compose.project: cineverse
