bridge/base/auth-service-deployment.yaml
#! auth-service-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-service
    namespace: cineverse
    labels:
        com.docker.compose.project: cineverse
        com.docker.compose.service: auth-service
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: cineverse
            com.docker.compose.service: auth-service
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: cineverse
                com.docker.compose.service: auth-service
                com.docker.compose.network.cineverse-net: "true"
        spec:
            containers:
                - name: auth-service
                  image: cineverse-auth-service
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: auth-servi-5001
                      containerPort: 5001
