bridge/base/gateway-deployment.yaml
#! gateway-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gateway
    namespace: cineverse
    labels:
        com.docker.compose.project: cineverse
        com.docker.compose.service: gateway
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: cineverse
            com.docker.compose.service: gateway
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: cineverse
                com.docker.compose.service: gateway
                com.docker.compose.network.cineverse-net: "true"
        spec:
            containers:
                - name: gateway
                  image: cineverse-gateway
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: gateway-5000
                      containerPort: 5000
