bridge/base/movie-service-deployment.yaml
#! movie-service-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: movie-service
    namespace: cineverse
    labels:
        com.docker.compose.project: cineverse
        com.docker.compose.service: movie-service
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: cineverse
            com.docker.compose.service: movie-service
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: cineverse
                com.docker.compose.service: movie-service
                com.docker.compose.network.cineverse-net: "true"
        spec:
            containers:
                - name: movie-service
                  image: cineverse-movie-service
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: movie-serv-5002
                      containerPort: 5002
