bridge/base/gateway-expose.yaml
#! gateway-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: gateway
    namespace: cineverse
    labels:
        com.docker.compose.project: cineverse
        com.docker.compose.service: gateway
spec:
    selector:
        com.docker.compose.project: cineverse
        com.docker.compose.service: gateway
    ports:
        - name: gateway-5000
          port: 5000
          targetPort: gateway-5000
