bridge/base/gateway-service.yaml
#! gateway-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: gateway-published
    namespace: cineverse
    labels:
        com.docker.compose.project: cineverse
        com.docker.compose.service: gateway
spec:
    selector:
        com.docker.compose.project: cineverse
        com.docker.compose.service: gateway
    ports:
        - name: gateway-5000
          port: 5000
          protocol: TCP
          targetPort: gateway-5000

# check if there is at least one published port
