bridge/base/mongodb-expose.yaml
#! mongodb-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mongodb
    namespace: cineverse
    labels:
        com.docker.compose.project: cineverse
        com.docker.compose.service: mongodb
spec:
    selector:
        com.docker.compose.project: cineverse
        com.docker.compose.service: mongodb
    ports:
        - name: mongodb-27017
          port: 27017
          targetPort: mongodb-27017
