bridge/base/movie-service-expose.yaml
#! movie-service-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: movie-service
    namespace: cineverse
    labels:
        com.docker.compose.project: cineverse
        com.docker.compose.service: movie-service
spec:
    selector:
        com.docker.compose.project: cineverse
        com.docker.compose.service: movie-service
    ports:
        - name: movie-serv-5002
          port: 5002
          targetPort: movie-serv-5002
