bridge/base/postgres-db-service.yaml
#! postgres-db-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: postgres-db-published
    namespace: cineverse
    labels:
        com.docker.compose.project: cineverse
        com.docker.compose.service: postgres-db
spec:
    selector:
        com.docker.compose.project: cineverse
        com.docker.compose.service: postgres-db
    ports:
        - name: postgres-d-5432
          port: 5432
          protocol: TCP
          targetPort: postgres-d-5432

# check if there is at least one published port
