bridge/base/cineverse-net-network-policy.yaml
#! cineverse-net-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: cineverse-net-network-policy
    namespace: cineverse
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.cineverse-net: "true"
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.cineverse-net: "true"
